k8s/superglue/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: valeo-integrations
  labels:
    app.kubernetes.io/part-of: valeo-neuroerp
    app.kubernetes.io/component: superglue
    name: valeo-integrations
