k8s/superglue/superglue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: superglue
  labels:
    app.kubernetes.io/name: superglue
    app.kubernetes.io/part-of: valeo-neuroerp
spec:
  ports:
    - name: web
      port: 3001
      targetPort: 3001
    - name: api
      port: 3002
      targetPort: 3002
  selector:
    app.kubernetes.io/name: superglue
    app.kubernetes.io/part-of: valeo-neuroerp
